# hashle

./: .gitignore  README.md  pyproject.toml
src/hashle/: __init__.py  cli.py  core.py
src/hashle/algorithms/: __init__.py  _tiger_sboxes.py  _util.py  _whirlpool_sbox.py  base.py  md4.py  md5.py  ripemd160.py  sha1.py  sha256.py  sha512.py  sm3.py  tiger.py  whirlpool.py
tests/: conftest.py  test_cli.py  test_hashlib_parity.py  test_known_vectors.py  test_length_extension.py
